--- a/.github/workflows/launch-ipfs.yml
+++ b/.github/workflows/launch-ipfs.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
       - uses: sergeysova/jq-action@v2
+      - run: yarn install
       - id: manifest
         run: echo "::set-output name=manifest::$(yarn run --silent storefront ${{ github.events.inputs.wallet }})"
         env:
@@ -27,6 +28,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+      - run: yarn install
       - name: Generate Theme
         run: yarn theme ${{ needs.storefront.outputs.manifest }}
       - name: Archive theme artifact
