--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "fetch": "^1.1.0",
     "final-form": "^4.20.2",
     "fs-extra": "^10.0.0",
-    "isomorphic-fetch": "^3.0.0",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "11.0.1",
     "next-plugin-antd-less": "^1.3.0",
     "polished": "^4.1.3",
