--- a/.github/workflows/launch-ipfs.yml
+++ b/.github/workflows/launch-ipfs.yml
@@ -12,6 +12,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
       - uses: sergeysova/jq-action@v2
+      - uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
       - run: yarn install
       - id: manifest
         run: echo "::set-output name=manifest::$(yarn run --silent storefront ${{ github.events.inputs.wallet }})"
@@ -28,6 +32,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+      - uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
       - run: yarn install
       - name: Generate Theme
         run: yarn theme ${{ needs.storefront.outputs.manifest }}
@@ -53,6 +61,10 @@ jobs:
         with:
           name: storefront-theme
           path: js/packages/web
+      - uses: actions/cache@v2
+        with:
+          path: '**/js/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/js/yarn.lock') }}
       - name: Yarn install
         working-directory: js
         run: yarn install
