refactor: set wallet pubkey to env for the run and reference through environment variable

--- a/.github/workflows/launch-ipfs.yml
+++ b/.github/workflows/launch-ipfs.yml
@@ -18,14 +18,15 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
       - run: yarn install
       - id: manifest
-        run: echo "::set-output name=manifest::$(yarn run --silent storefront EwuvFLHK7XCjMAHSCXkmvm6iEtzmYdkyYjHTN9rMvMMe)"
+        run: echo "::set-output name=manifest::$(yarn run --silent storefront ${SOLANA_PUBLIC_KEY})"
         env:
           NEXT_PUBLIC_ARWEAVE_HOST: arweave.net
           NEXT_PUBLIC_ARWEAVE_PROTOCOL: https
           NEXT_PUBLIC_ARWEAVE_PORT: "443"
           NEXT_PUBLIC_ARWEAVE_LOGGING: "true"
+          SOLANA_PUBLIC_KEY: ${{ github.events.inputs.wallet }}
       - id: subdomain
-        run: echo "::set-output name=subdomain::$(echo ${{ steps.manifest.outputs.manifest }} | jq '.subdomain')"
+        run: echo "::set-output name=subdomain::$(echo "${{ steps.manifest.outputs.manifest }}" | jq '.subdomain')"
   theme:
     needs:
       - storefront
