fix: manifest parsing in theme variables

--- a/.github/workflows/launch-ipfs.yml
+++ b/.github/workflows/launch-ipfs.yml
@@ -39,7 +39,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
       - run: yarn install
       - name: Generate Theme
-        run: yarn theme ${{ fromJSON(needs.storefront.outputs.manifest) }}
+        run: yarn theme '${{ needs.storefront.outputs.manifest }}'
       - name: Archive theme artifact
         uses: actions/upload-artifact@v2
         with:
