--- a/.github/workflows/launch-ipfs.yml
+++ b/.github/workflows/launch-ipfs.yml
@@ -23,9 +23,7 @@ jobs:
         env:
           NEXT_PUBLIC_ARWEAVE_HOST: arweave.ngrok.io
           NEXT_PUBLIC_ARWEAVE_PROTOCOL: https
-          NEXT_PUBLIC_ARWEAVE_PORT: "443"
-          NEXT_PUBLIC_ARWEAVE_LOGGING: "true"
-
+          NEXT_PUBLIC_ARWEAVE_PORT: 443
   theme:
     needs:
       - storefront
@@ -80,7 +78,7 @@ jobs:
         working-directory: js/packages/web
         run: yarn export
       - id: subdomain
-        run: echo "::set-output name=value::$(echo "${{ needs.storefront.outputs.manifest }}" | jq '.subdomain')"
+        run: echo "::set-output name=value::$(echo '${{ needs.storefront.outputs.manifest }}' | jq '.subdomain')"
       - name: IPFS Deploy
         working-directory: js
         env:
