--- a/.github/workflows/launch-ipfs.yml
+++ b/.github/workflows/launch-ipfs.yml
@@ -82,7 +82,7 @@ jobs:
       - name: IPFS Deploy
         working-directory: js
         env:
-          IPFS_DEPLOY_CLOUDFLARE__RECORD: "_dnslink.${{ steps.subdomain.outputs.value }}.holaespi.com"
+          IPFS_DEPLOY_CLOUDFLARE__RECORD: ${{ join(['_dnslink', steps.subdomain.outputs.value, 'holaespi.com'], '.') }}
           IPFS_DEPLOY_CLOUDFLARE__ZONE: ${{ secrets.IPFS_DEPLOY_CLOUDFLARE__ZONE }}
           IPFS_DEPLOY_PINATA__API_KEY: ${{ secrets.IPFS_DEPLOY_PINATA__API_KEY }}
           IPFS_DEPLOY_PINATA__SECRET_API_KEY: ${{ secrets.IPFS_DEPLOY_PINATA__SECRET_API_KEY }}
