--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   "dependencies": {
     "@prisma/client": "^2.25.0",
     "@samuelmeuli/font-manager": "^1.4.0",
+    "@solana/web3.js": "^1.24.1",
     "antd": "^4.16.7",
     "antd-mobile": "^2.3.4",
     "arweave": "^1.10.15",
+    "buffer": "^6.0.3",
     "color": "^3.1.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "crypto": "^1.0.1",
+    "crypto-hash": "^1.3.0",
     "feather-icons-react": "^0.4.3",
     "fetch": "^1.1.0",
     "final-form": "^4.20.2",
@@ -44,6 +46,7 @@
     "react-infinite-scroll-hook": "^4.0.1",
     "react-toastify": "^7.0.4",
     "styled-components": "^5.3.0",
+    "tweetnacl": "^1.0.3",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
