Prep upload-store for posting Arweave transactions

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^2.25.0",
     "@samuelmeuli/font-manager": "^1.4.0",
     "@solana/web3.js": "^1.24.1",
+    "ajv": "^8.6.2",
     "antd": "^4.16.7",
     "antd-mobile": "^2.3.4",
     "arweave": "^1.10.15",
@@ -34,6 +35,7 @@
     "feather-icons-react": "^0.4.3",
     "fetch": "^1.1.0",
     "final-form": "^4.20.2",
+    "formidable": "^1.2.2",
     "fs-extra": "^10.0.0",
     "next": "11.0.1",
     "next-images": "^1.8.1",
