Add support code for server SOL & AR transactions.

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,6 @@
+AWS_REGION=us-west-2
 NEXT_PUBLIC_ARWEAVE_HOST=localhost
 NEXT_PUBLIC_ARWEAVE_PORT=1984
 NEXT_PUBLIC_ARWEAVE_PROTOCOL=http
 DATABASE_URL=postgres://postgres:password@localhost:15432/holaplex
+SOLANA_ENDPOINT=https://api.devnet.solana.com
