--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ NEXT_PUBLIC_ARWEAVE_HOST=arweave.net
 NEXT_PUBLIC_ARWEAVE_PORT=443
 NEXT_PUBLIC_ARWEAVE_PROTOCOL=https
 DATABASE_URL=postgres://postgres:password@localhost:15432/holaplex
+SOLANA_ENDPOINT=https://api.metaplex.solana.com
