--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "dev:theme": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\" -T ./hacks/demo-theme.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.30.0",
+    "@aws-sdk/types": "^3.29.0",
     "@prisma/client": "^2.25.0",
     "@samuelmeuli/font-manager": "^1.4.0",
+    "@solana/web3.js": "^1.25.0",
     "antd": "^4.16.7",
     "arweave": "^1.10.15",
+    "buffer": "^6.0.3",
     "color": "^3.1.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "crypto": "^1.0.1",
     "fetch": "^1.1.0",
     "final-form": "^4.20.2",
     "fs-extra": "^10.0.0",
