Add endpoint for uploading store without ArConnect

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,4 @@ NEXT_PUBLIC_ARWEAVE_PORT=1984
 NEXT_PUBLIC_ARWEAVE_PROTOCOL=http
 DATABASE_URL=postgres://postgres:password@localhost:15432/holaplex
 SOLANA_ENDPOINT=https://api.devnet.solana.com
+STORE_UPLOAD_FEE=20000000
