--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ NEXT_PUBLIC_ARWEAVE_PORT=443
 NEXT_PUBLIC_ARWEAVE_PROTOCOL=https
 DATABASE_URL=postgres://postgres:password@localhost:15432/holaplex
 SOLANA_ENDPOINT=https://api.metaplex.solana.com
+STORE_UPLOAD_FEE=20000000
