--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "color": "^3.1.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "crypto-hash": "^1.3.0",
     "fetch": "^1.1.0",
     "final-form": "^4.20.2",
+    "formidable": "^1.2.2",
     "fs-extra": "^10.0.0",
     "next": "11.0.1",
     "next-plugin-antd-less": "^1.3.0",
@@ -42,6 +44,7 @@
     "react-dom": "17.0.2",
     "react-toastify": "^7.0.4",
     "styled-components": "^5.3.0",
+    "tweetnacl": "^1.0.3",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
