--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,36 +15,17 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/common/*": [
-        "src/common/*"
-      ],
-      "@/styles/*": [
-        "src/common/styles/*"
-      ],
-      "@/assets/*": [
-        "src/common/assets/*"
-      ],
-      "@/components/*": [
-        "src/common/components/*"
-      ],
-      "@/constants/*": [
-        "src/common/constants/*"
-      ],
-      "@/hooks/*": [
-        "src/common/hooks/*"
-      ],
-      "@/layouts/*": [
-        "src/layouts/*"
-      ],
-      "@/modules/*": [
-        "src/modules/*"
-      ],
-      "@/types/*": [
-        "src/types/*"
-      ]
+      "@/common/*": ["src/common/*"],
+      "@/styles/*": ["src/common/styles/*"],
+      "@/assets/*": ["src/common/assets/*"],
+      "@/components/*": ["src/common/components/*"],
+      "@/constants/*": ["src/common/constants/*"],
+      "@/hooks/*": ["src/common/hooks/*"],
+      "@/layouts/*": ["src/layouts/*"],
+      "@/modules/*": ["src/modules/*"],
+      "@/types/*": ["src/types/*"]
     }
   },
-  "types": ["google.analytics"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
