--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "storefronts:update": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\" -T ./hacks/update-store-json.ts"
   },
   "dependencies": {
+    "5": "^0.0.1",
     "@apollo/client": "^3.5.8",
     "@aws-sdk/client-secrets-manager": "^3.30.0",
     "@aws-sdk/types": "^3.29.0",
@@ -58,7 +59,7 @@
     "graphql": "^16.3.0",
     "luxon": "^2.1.1",
     "mixpanel-browser": "^2.43.0",
-    "next": "11.0.1",
+    "next": "^11.0.1",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.1",
     "next-with-less": "^2.0.5",
@@ -115,9 +116,10 @@
     "prettier-plugin-tailwindcss": "^0.1.4",
     "tailwindcss": "^3.0.18",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "webpack": "^5.69.1"
   },
   "engines": {
-    "node": "16.14.0"
+    "node": "17.5.0"
   }
 }
