--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "final-form": "^4.20.2",
     "formidable": "^1.2.2",
     "fs-extra": "^10.0.0",
+    "gh-pages": "^3.2.3",
     "graphql": "^16.3.0",
     "luxon": "^2.1.1",
     "mixpanel-browser": "^2.43.0",
