--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RIAD",
+  "name": "riad",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://github.com/ReunionArt/holaplex",
@@ -54,6 +54,7 @@
     "color": "^3.1.3",
     "cross-env": "^7.0.3",
     "crypto-hash": "^1.3.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "feather-icons-react": "^0.4.3",
     "fetch": "^1.1.0",
     "final-form": "^4.20.2",
@@ -76,6 +77,7 @@
     "react-device-detect": "^1.17.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.1",
+    "react-hooks": "^1.0.1",
     "react-infinite-scroll-hook": "^4.0.1",
     "react-intersection-observer": "^8.33.1",
     "react-step-wizard": "^5.3.9",
@@ -107,7 +109,7 @@
     "autoprefixer": "^10.4.2",
     "babel-plugin-import": "^1.13.3",
     "chai": "^4.3.4",
-    "eslint": "7.29.0",
+    "eslint": "^7.29.0",
     "eslint-config-next": "11.0.1",
     "husky": "^7.0.2",
     "less": "^4.1.2",
