--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "predeploy": "yarn run build",
     "deploy": "gh-pages -b master -d build",
     "dev": "nodemon",
-    "build": "next build && tsc --project tsconfig.server.json",
+    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && next build && tsc --project tsconfig.server.json",
     "start": "cross-env NODE_ENV=production node dist/server.js",
     "consumers:sign-metadata": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\" -T ./tasks/consumers/sign-metadata.ts",
     "lint": "next lint",
@@ -64,7 +64,7 @@
     "graphql": "^16.3.0",
     "luxon": "^2.1.1",
     "mixpanel-browser": "^2.43.0",
-    "next": "^11.1.4",
+    "next": "^11.0.1",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.1",
     "next-with-less": "^2.0.5",
