--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npx nodemon",
+    "dev": "nodemon",
     "build": "next build && tsc --project tsconfig.server.json",
     "start": "cross-env NODE_ENV=production node dist/server.js",
     "consumers:sign-metadata": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\" -T ./tasks/consumers/sign-metadata.ts",
     "lint": "next lint",
     "db:schema:push": "prisma db push",
-    "db:seed": "npx prisma db seed",
+    "db:seed": "prisma db seed --preview-feature",
     "db:schema:format": "prisma format",
     "db:migrate:create": "prisma migrate dev",
     "db:migrate": "prisma migrate deploy",
@@ -30,7 +30,7 @@
     "@holaplex/js": "^4.3.2",
     "@holaplex/ui": "^0.0.26",
     "@metaplex/js": "^4.2.0",
-    "@prisma/client": "^3.9.2",
+    "@prisma/client": "^2.25.0",
     "@samuelmeuli/font-manager": "^1.4.0",
     "@solana/spl-name-service": "^0.1.3",
     "@solana/wallet-adapter-base": "^0.9.2",
@@ -64,7 +64,7 @@
     "next-with-less": "^2.0.4",
     "nextjs-cors": "^1.0.6",
     "polished": "^4.1.3",
-    "prisma": "^3.9.2",
+    "prisma": "2.25.0",
     "ramda": "^0.27.1",
     "react": "17.0.2",
     "react-color": "^2.19.3",
@@ -75,9 +75,9 @@
     "react-intersection-observer": "^8.33.1",
     "react-step-wizard": "^5.3.9",
     "react-toastify": "^7.0.4",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.3.0",
     "swr": "^1.2.0",
-    "ts-node": "^10.5.0",
+    "ts-node": "^10.4.0",
     "tweetnacl": "^1.0.3",
     "use-onclickoutside": "^0.4.0",
     "yarn": "^1.22.10"
@@ -93,9 +93,9 @@
     "@types/gtag.js": "^0.0.7",
     "@types/luxon": "^2.0.7",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^17.0.18",
+    "@types/node": "^15.12.4",
     "@types/ramda": "^0.27.41",
-    "@types/react": "^17.0.39",
+    "@types/react": "17.0.11",
     "@types/spark-md5": "^3.0.2",
     "@types/styled-components": "^5.1.10",
     "arconnect": "^0.2.9",
@@ -115,7 +115,7 @@
     "prettier-plugin-tailwindcss": "^0.1.4",
     "tailwindcss": "^3.0.18",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.3.4"
   },
   "engines": {
     "node": "16.13.2"
