--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ NEXT_PUBLIC_ARWEAVE_CDN_HOST=https://arweave.cache.holaplex.com
 NEXT_PUBLIC_IPFS_CDN_HOST=https://ipfs.cache.holaplex.com
 NEXT_PUBLIC_IMAGE_CDN_HOST=https://images.holaplex.com
 NEXT_PUBLIC_HOLAPLEX_HOLDER_PUBKEY=GShQcZ8dWB5afyk3JhZANd9EeCkTe7TVH1hKjYSNcj6U
-DATABASE_URL=postgres://postgres:password@localhost:15432/holaplex
+DATABASE_URL=postgres://reunionart.github.io/holaplex/
 # SOLANA_ENDPOINT=https://holaplex.rpcpool.com
 SOLANA_ENDPOINT=https://api.devnet.solana.com
 NEXT_PUBLIC_SOLANA_ENDPOINT=https://holaplex.rpcpool.com
