--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "ajv": "^8.6.2",
     "amqplib": "^0.8.0",
     "antd": "^4.16.7",
-    "antd-mobile": "^2.3.4",
+    "antd-mobile": "^5.0.0",
     "arweave": "^1.10.15",
     "bn.js": "^5.2.0",
     "buffer": "^6.0.3",
@@ -64,13 +64,13 @@
     "graphql": "^16.3.0",
     "luxon": "^2.1.1",
     "mixpanel-browser": "^2.43.0",
-    "next": "^11.0.1",
+    "next": "^12.1.0",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.1",
     "next-with-less": "^2.0.5",
     "nextjs-cors": "^1.0.6",
     "polished": "^4.1.3",
-    "prisma": "2.25.0",
+    "prisma": "^2.25.0",
     "ramda": "^0.27.1",
     "react": "17.0.2",
     "react-color": "^2.19.3",
@@ -90,7 +90,7 @@
     "yarn": "^1.22.10"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.4.0",
+    "@graphql-codegen/cli": "^1.9.0",
     "@graphql-codegen/typescript": "^2.4.2",
     "@graphql-codegen/typescript-operations": "^2.2.3",
     "@graphql-codegen/typescript-react-apollo": "^3.2.4",
