--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "storefronts:update": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\" -T ./hacks/update-store-json.ts"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@apollo/client": "^3.5.8",
     "@aws-sdk/client-secrets-manager": "^3.30.0",
     "@aws-sdk/types": "^3.29.0",
@@ -59,6 +60,7 @@
     "final-form": "^4.20.2",
     "formidable": "^1.2.2",
     "fs-extra": "^10.0.0",
+    "gh-pages": "^3.2.3",
     "graphql": "^16.3.0",
     "luxon": "^2.1.1",
     "mixpanel-browser": "^2.43.0",
@@ -79,6 +81,7 @@
     "react-intersection-observer": "^8.33.1",
     "react-step-wizard": "^5.3.9",
     "react-toastify": "^7.0.4",
+    "save-dev": "^0.0.1-security",
     "styled-components": "^5.3.0",
     "swr": "^1.2.0",
     "ts-node": "^10.4.0",
