--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "holaplex-builder",
+  "name": "riad",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://reunionart.github.io/holaplex/",
