--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ NEXT_PUBLIC_IMAGE_CDN_HOST=https://images.holaplex.com
 NEXT_PUBLIC_HOLAPLEX_HOLDER_PUBKEY=ho1aAnkbQA1qzAHKhMpBJVR2GueTnQaNMvWFNGJPzJd
 DATABASE_URL=postgres://postgres:password@localhost:15432/holaplex
 # SOLANA_ENDPOINT=https://holaplex.rpcpool.com
-SOLANA_ENDPOINT=https://api.devnet.solana.com
+SOLANA_ENDPOINT=https://api.mainnet-beta.solana.com
 NEXT_PUBLIC_SOLANA_ENDPOINT=https://holaplex.rpcpool.com
 NEXT_PUBLIC_INDEXER_RPC_URL=https://metaplex-indexer-staging.herokuapp.com
 # NEXT_PUBLIC_INDEXER_GRAPHQL_URL=https://indexer-graphql-staging.herokuapp.com/v0
