--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,6 @@
   "extends": ["next", "next/core-web-vitals"],
   "rules": {
     "@next/next/no-img-element": "off"
+    "react/no-unescaped-entities": "0"
   }
 }
