--- a/.env
+++ b/.env
@@ -19,3 +19,4 @@ NEXT_PUBLIC_SOLANA_ENDPOINT=https://holaplex.rpcpool.com
 NEXT_PUBLIC_INDEXER_RPC_URL=https://metaplex-indexer-staging.herokuapp.com
 NEXT_PUBLIC_INDEXER_GRAPHQL_URL=https://graph.holaplex.com/v1
 NEXT_PUBLIC_ENVIRONMENT=development
+NEXT_PUBLIC_HASURA_GRAPHQL_URL=http://localhost:8080/v1/graphql
