--- a/codegen-ssr.yml
+++ b/codegen-ssr.yml
@@ -1,5 +1,5 @@
 schema: ${NEXT_PUBLIC_INDEXER_GRAPHQL_URL}
-documents: './src/graphql/**/*.graphql'
+documents: './src/graphql/indexer/**/*.graphql'
 generates:
   ./src/graphql/indexerTypes.ssr.ts:
     plugins:
