--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "generate:graphql-apollo": "graphql-codegen -r dotenv-flow/config --config codegen-apollo.yml",
     "generate:graphql-request": "graphql-codegen -r dotenv-flow/config --config codegen-graphql-request.yml",
     "generate:graphql": "yarn generate:graphql-apollo && yarn generate:graphql-request",
-    "storefronts:update": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\" -T ./hacks/update-store-json.ts"
+    "storefronts:update": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\" -T ./hacks/update-store-json.ts",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
@@ -115,10 +117,19 @@
     "zod": "^3.14.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
     "@graphql-codegen/cli": "^2.4.0",
     "@graphql-codegen/typescript": "^2.4.2",
     "@graphql-codegen/typescript-operations": "^2.2.3",
     "@graphql-codegen/typescript-react-apollo": "^3.2.4",
+    "@storybook/addon-actions": "^6.5.7",
+    "@storybook/addon-essentials": "^6.5.7",
+    "@storybook/addon-interactions": "^6.5.7",
+    "@storybook/addon-links": "^6.5.7",
+    "@storybook/builder-webpack5": "^6.5.7",
+    "@storybook/manager-webpack5": "^6.5.7",
+    "@storybook/react": "^6.5.7",
+    "@storybook/testing-library": "^0.0.11",
     "@tailwindcss/forms": "^0.4.0",
     "@types/chai": "^4.2.19",
     "@types/color": "^3.0.2",
@@ -136,6 +147,7 @@
     "@types/uuid": "^8.3.4",
     "arconnect": "^0.2.9",
     "autoprefixer": "^10.4.2",
+    "babel-loader": "^8.2.5",
     "babel-plugin-import": "^1.13.3",
     "chai": "^4.3.4",
     "dotenv-flow": "^3.2.0",
