no references to localhost, no unneeded logging, configurable via ENV var and no commented out code

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,5 @@ FEATURED_STOREFRONTS_URL="https://nftstorage.link/ipfs/bafkreifay7aebzkasogdrc2l
 NEXT_PUBLIC_ENVIRONMENT=development
 NEXT_PUBLIC_HASURA_GRAPHQL_URL=https://dev-holaplex.hasura.app/v1/graphql
 HASURA_GRAPHQL_ADMIN_SECRET=
+NEXT_PUBLIC_BASE_URL=https://holaplex.com
+NEXT_PUBLIC_ADMIN_PATH=/admin/login
