--- a/.env
+++ b/.env
@@ -22,3 +22,5 @@ NEXT_PUBLIC_INDEXER_GRAPHQL_URL="https://graph.holaplex.com/v1"
 NEXT_PUBLIC_ENVIRONMENT=production
 NEXT_PUBLIC_HASURA_GRAPHQL_URL=https://dev-holaplex.hasura.app/v1/graphql
 HASURA_GRAPHQL_ADMIN_SECRET=
+NEXT_PUBLIC_BASE_URL=https://holaplex.com
+NEXT_PUBLIC_ADMIN_PATH=/admin/login
