--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,15 +16,15 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/common/*": ["src/common/*"],
-      "@/styles/*": ["src/assets/styles/*"],
       "@/assets/*": ["src/assets/*"],
       "@/components/*": ["src/components/*"],
-      "@/constants/*": ["src/common/constants/*"],
+      "@/graphql/*": ["src/graphql/*"],
       "@/hooks/*": ["src/hooks/*"],
-      "@/views/*": ["src/views/*"],
+      "@/lib/*": ["src/lib/*"],
       "@/modules/*": ["src/modules/*"],
-      "@/types/*": ["src/types/*"]
+      "@/pages/*": ["src/pages/*"],
+      "@/types/*": ["src/types/*"],
+      "@/views/*": ["src/views/*"]
     },
     "incremental": true
   },
