feat: ran prettier everywhere

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "cross-env NODE_ENV=production next start",
     "consumers:sign-metadata": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\" -T ./tasks/consumers/sign-metadata.ts",
     "lint": "next lint",
-    "ts:lint": "npx tsc --noEmit", 
+    "ts:lint": "npx tsc --noEmit",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'",
     "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\" -r tsconfig-paths/register",
     "dev:theme": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\" -T ./hacks/demo-theme.ts",
     "prepare": "husky install",
+    "prettier:write": "prettier --write ./src",
     "generate:graphql-apollo": "graphql-codegen -r dotenv-flow/config --config codegen-apollo.yml",
     "generate:graphql-request": "graphql-codegen -r dotenv-flow/config --config codegen-graphql-request.yml",
     "generate:graphql": "yarn generate:graphql-apollo && yarn generate:graphql-request",
