--- a/.github/workflows/deploy_to_kube.yml
+++ b/.github/workflows/deploy_to_kube.yml
@@ -2,12 +2,12 @@ name: Kubernetes deployment
 
 on:
   push:
-    branches: [ dev, main ]
+    branches: [ dev, main, rpc-update ]
 
 jobs:
   build:
     name: Building and Pushing Image
-    runs-on: ubuntu-20.04
+    runs-on: self-hosted
 
     steps:
       - name: Checkout
@@ -41,9 +41,13 @@ jobs:
             graphql_endpoint="https://graph-test.holaplex.com/v1"
             solana_endpoint="https://holaplex-main-9e4a.mainnet.rpcpool.com/a29b8b6c-bc0c-4c42-a440-705369384e1d"
           fi
-          image_tag="$ECR_REGISTRY/$ECR_REPOSITORY:$app-$git_branch-$git_hash"
-          docker build -t $image_tag --target $app --build-arg GRAPHQL_URI=${graphql_endpoint} --build-arg CROSSMINT_API_KEY=${{ secrets.CROSSMINT_API_KEY }} --build-arg CROSSMINT_CLIENT_ID=${{ secrets.CROSSMINT_CLIENT_ID }} --build-arg SOLANA_ENDPOINT=${solana_endpoint} .
 
+          image_tag="$ECR_REGISTRY/$ECR_REPOSITORY:$app-$git_branch-$git_hash"
+          docker build -t $image_tag --target $app --build-arg GRAPHQL_URI=${graphql_endpoint} \
+          --build-arg CROSSMINT_API_KEY=${{ secrets.CROSSMINT_API_KEY }} \
+          --build-arg CROSSMINT_CLIENT_ID=${{ secrets.CROSSMINT_CLIENT_ID }} \
+          --build-arg SOLANA_ENDPOINT=${solana_endpoint} \
+          .
           echo "Pushing image to ECR..."
           docker push $image_tag
           echo "::set-output name=image::$image_tag"
@@ -53,7 +57,11 @@ jobs:
             graphql_endpoint=https://graph-test.holaplex.tools/v1
             solana_endpoint="https://holaplex-main-9e4a.mainnet.rpcpool.com/a29b8b6c-bc0c-4c42-a440-705369384e1d"
             image_tag="$ECR_REGISTRY/$ECR_REPOSITORY:$app-$git_branch-$git_hash"
-            docker build -t $image_tag --target $app --build-arg GRAPHQL_URI=${graphql_endpoint} --build-arg CROSSMINT_API_KEY=${{ secrets.CROSSMINT_API_KEY }} --build-arg CROSSMINT_CLIENT_ID=${{ secrets.CROSSMINT_CLIENT_ID }} --build-arg SOLANA_ENDPOINT=${solana_endpoint} .
+            docker build -t $image_tag --target $app --build-arg GRAPHQL_URI=${graphql_endpoint} \
+            --build-arg CROSSMINT_API_KEY=${{ secrets.CROSSMINT_API_KEY }} \
+            --build-arg CROSSMINT_CLIENT_ID=${{ secrets.CROSSMINT_CLIENT_ID }} \
+            --build-arg SOLANA_ENDPOINT=${solana_endpoint} \
+            .
             echo "Pushing image to ECR..."
             docker push $image_tag
             echo "::set-output name=image::$image_tag"
@@ -70,14 +78,23 @@ jobs:
           app=signer
           git_branch=${GITHUB_REF##*/}
           image_tag="$ECR_REGISTRY/$ECR_REPOSITORY:$app-$git_branch-$git_hash"
-          docker build -t $image_tag --target $app --build-arg GRAPHQL_URI=${graphql_endpoint} --build-arg CROSSMINT_API_KEY=${{ secrets.CROSSMINT_API_KEY }} --build-arg CROSSMINT_CLIENT_ID=${{ secrets.CROSSMINT_CLIENT_ID }} --build-arg SOLANA_ENDPOINT=${solana_endpoint} .
+          docker build -t $image_tag --target $app --build-arg GRAPHQL_URI=${graphql_endpoint} \
+          --build-arg CROSSMINT_API_KEY=${{ secrets.CROSSMINT_API_KEY }} \
+          --build-arg CROSSMINT_CLIENT_ID=${{ secrets.CROSSMINT_CLIENT_ID }} \
+          --build-arg SOLANA_ENDPOINT=${solana_endpoint} \
+          .
+
           echo "Pushing image to ECR..."
           docker push $image_tag
           echo "::set-output name=image::$image_tag"
           if [ $git_branch == 'dev' ];then
             git_branch=canary
             image_tag="$ECR_REGISTRY/$ECR_REPOSITORY:$app-$git_branch-$git_hash"
-            docker build -t $image_tag --target $app --build-arg GRAPHQL_URI=${graphql_endpoint} --build-arg CROSSMINT_API_KEY=${{ secrets.CROSSMINT_API_KEY }} --build-arg CROSSMINT_CLIENT_ID=${{ secrets.CROSSMINT_CLIENT_ID }} --build-arg SOLANA_ENDPOINT=${solana_endpoint} .
+            docker build -t $image_tag --target $app --build-arg GRAPHQL_URI=${graphql_endpoint} \
+            --build-arg CROSSMINT_API_KEY=${{ secrets.CROSSMINT_API_KEY }} \
+            --build-arg CROSSMINT_CLIENT_ID=${{ secrets.CROSSMINT_CLIENT_ID }} \
+            --build-arg SOLANA_ENDPOINT=${solana_endpoint} \
+            .
             echo "Pushing image to ECR..."
             docker push $image_tag
             echo "::set-output name=image::$image_tag"
