--- a/.github/workflows/deploy_to_kube.yml
+++ b/.github/workflows/deploy_to_kube.yml
@@ -46,7 +46,7 @@ jobs:
           docker build -t $image_tag --target $app --build-arg GRAPHQL_URI=${graphql_endpoint} \
           --build-arg CROSSMINT_API_KEY=${{ secrets.CROSSMINT_API_KEY }} \
           --build-arg CROSSMINT_CLIENT_ID=${{ secrets.CROSSMINT_CLIENT_ID }} \
-          --build-arg SOLANA_ENDPOINT=${solana_endpoint} \
+          --build-arg SOLANA_ENDPOINT="${solana_endpoint}" \
           .
           echo "Pushing image to ECR..."
           docker push $image_tag
@@ -60,7 +60,7 @@ jobs:
             docker build -t $image_tag --target $app --build-arg GRAPHQL_URI=${graphql_endpoint} \
             --build-arg CROSSMINT_API_KEY=${{ secrets.CROSSMINT_API_KEY }} \
             --build-arg CROSSMINT_CLIENT_ID=${{ secrets.CROSSMINT_CLIENT_ID }} \
-            --build-arg SOLANA_ENDPOINT=${solana_endpoint} \
+            --build-arg SOLANA_ENDPOINT="${solana_endpoint}" \
             .
             echo "Pushing image to ECR..."
             docker push $image_tag
@@ -78,10 +78,7 @@ jobs:
           app=signer
           git_branch=${GITHUB_REF##*/}
           image_tag="$ECR_REGISTRY/$ECR_REPOSITORY:$app-$git_branch-$git_hash"
-          docker build -t $image_tag --target $app --build-arg GRAPHQL_URI=${graphql_endpoint} \
-          --build-arg CROSSMINT_API_KEY=${{ secrets.CROSSMINT_API_KEY }} \
-          --build-arg CROSSMINT_CLIENT_ID=${{ secrets.CROSSMINT_CLIENT_ID }} \
-          --build-arg SOLANA_ENDPOINT=${solana_endpoint} \
+          docker build -t $image_tag --target $app .
           .
 
           echo "Pushing image to ECR..."
@@ -90,11 +87,7 @@ jobs:
           if [ $git_branch == 'dev' ];then
             git_branch=canary
             image_tag="$ECR_REGISTRY/$ECR_REPOSITORY:$app-$git_branch-$git_hash"
-            docker build -t $image_tag --target $app --build-arg GRAPHQL_URI=${graphql_endpoint} \
-            --build-arg CROSSMINT_API_KEY=${{ secrets.CROSSMINT_API_KEY }} \
-            --build-arg CROSSMINT_CLIENT_ID=${{ secrets.CROSSMINT_CLIENT_ID }} \
-            --build-arg SOLANA_ENDPOINT=${solana_endpoint} \
-            .
+            docker build -t $image_tag --target $app .
             echo "Pushing image to ECR..."
             docker push $image_tag
             echo "::set-output name=image::$image_tag"
