--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ NEXT_PUBLIC_IPFS_CDN_HOST=https://ipfs.cache.holaplex.com
 NEXT_PUBLIC_IMAGE_CDN_HOST=https://assets.holaplex.tools
 NEXT_PUBLIC_HOLAPLEX_HOLDER_PUBKEY=ho1aAnkbQA1qzAHKhMpBJVR2GueTnQaNMvWFNGJPzJd
 DATABASE_URL=postgres://postgres:password@localhost:5432/holaplex
-SOLANA_ENDPOINT=https://holaplex-main-9e4a.mainnet.rpcpool.com/a29b8b6c-bc0c-4c42-a440-705369384e1d
-NEXT_PUBLIC_SOLANA_ENDPOINT=https://holaplex-main-9e4a.mainnet.rpcpool.com/a29b8b6c-bc0c-4c42-a440-705369384e1d
+SOLANA_ENDPOINT=https://holaplex-main-9e4a.mainnet.rpcpool.com
+NEXT_PUBLIC_SOLANA_ENDPOINT=https://holaplex-main-9e4a.mainnet.rpcpool.com
 #SOLANA_ENDPOINT=https://api.devnet.solana.com
 NEXT_PUBLIC_INDEXER_RPC_URL=https://metaplex-indexer-staging.herokuapp.com
 NEXT_PUBLIC_INDEXER_GRAPHQL_URL="https://graph-test.holaplex.com/v1"
