--- a/.github/workflows/deploy_to_kube.yml
+++ b/.github/workflows/deploy_to_kube.yml
@@ -39,7 +39,7 @@ jobs:
             solana_endpoint="https://holaplex.rpcpool.com"
           else
             graphql_endpoint="https://graph-test.holaplex.com/v1"
-            solana_endpoint="https://holaplex-main-9e4a.mainnet.rpcpool.com/a29b8b6c-bc0c-4c42-a440-705369384e1d"
+            solana_endpoint="https://holaplex-main-9e4a.mainnet.rpcpool.com"
           fi
 
           image_tag="$ECR_REGISTRY/$ECR_REPOSITORY:$app-$git_branch-$git_hash"
@@ -55,7 +55,7 @@ jobs:
           if [ $git_branch == 'dev' ];then
             git_branch=canary
             graphql_endpoint=https://graph-test.holaplex.tools/v1
-            solana_endpoint="https://holaplex-main-9e4a.mainnet.rpcpool.com/a29b8b6c-bc0c-4c42-a440-705369384e1d"
+            solana_endpoint="https://holaplex-main-9e4a.mainnet.rpcpool.com"
             image_tag="$ECR_REGISTRY/$ECR_REPOSITORY:$app-$git_branch-$git_hash"
             docker build -t $image_tag --target $app --build-arg GRAPHQL_URI=${graphql_endpoint} \
             --build-arg CROSSMINT_API_KEY=${{ secrets.CROSSMINT_API_KEY }} \
